# how-fast

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: bench.yaml  slos.yaml
config/experiments/: TP_Prefix_Caching.yaml  TP_Speculative_1.yaml  TP_Speculative_3.yaml  baseline.yaml  prefix_caching.yaml
notebooks/: analysis.ipynb
scripts/: gpu_monitor.py
src/how_fast/: __init__.py  __main__.py  bench.py  cli.py  client.py  config.py  deployer.py  gpu_metrics.py  metrics.py  results.py  schemas.py  term.py  warmup.py
tests/: test_bench_engines.py  test_client.py  test_config.py  test_metrics.py  test_warmup.py
workloads/: chat.jsonl  classify.jsonl  mixed.jsonl  synthesize.jsonl  warmup.jsonl
